#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this program.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999962 released.

        * Fixes for FreeBSD.

        * New version of Term::Menus paired with this release.


2014-07-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999961 released.

        * Fixes for FreeBSD.


2014-07-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999960 released.

        * Fixes for FreeBSD.

        * Updated New User Experience.

        * New version of Term::Menus paired with this release.

        * New version of Term::RawInput paired with this release.


2014-07-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999959 released.

        * Updated New User Experience.

        * New version of Term::Menus paired with this release.


2014-07-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999958 released.

        * Updated FIGlet View Menu.

        * New version of Term::Menus paired with this release.


2014-07-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999957 released.

        * Added FIGlet font install.

        * New version of Term::Menus paired with this release.


2014-07-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999956 released.

        * AWS login assistance added.


2014-07-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999955 released.

        * New version of Term::Menus paired with this release.


2014-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999954 released.
