@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 a0b021e8342040848f610a2514351b4a58a51223 ChangeLog
+SHA1 8daa8b245d0271dc7240b1c5c60aa3be1c24f616 ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 5310d8e66f44f57f6b5e95d65343375c009ced4c META.yml
-SHA1 37c77a5e93f982d669586a16463c47d7c7068e88 Makefile.PL
+SHA1 e5ebcdfe3ee647a5ee107bea3f8bca6d04c72d6f META.yml
+SHA1 2d477f105f7bd16616766b07fe712a8428af7a55 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 656300e4ee0e9575c1f8fbd0d41d3ad3d265c93e lib/Net/FullAuto.pm
+SHA1 b99e63e218111c43021089666cd100087020ee17 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTzQgwAAoJEBa/9Pad787EMNEIAICx92WJupR/UaQtR2TGj2gC
-j4JmCKq1EWAHk8pzktiB1nNEzXAXEjmx0GcMCW0q7T+hgda052YUZEOs8OSAYX7Q
-vsVzKjjtiPBy0AZ3763C2miBMKXKJV32hWXD952IsMQ1qDrolVijNp6kPHaVblR0
-Z96RgcvrBrodSM+ydr8cdbJysejHGkFJupJmil6BBeBy2bwt1BhzQ24sFoiarUFu
-wZ06aebI1XR3+wIhwt3fCBBpnnsDnZyLwwdAaVfqKEjWNAw+1DndNbRNLK0nUZPa
-0CFbSnnjVOs4a+aTTQoT3Ue1xRnffL/p8IlQbZ/HNS/Q/s0nKGlKMfCuicI+jIo=
-=+eUk
+iQEcBAEBAgAGBQJTzQyrAAoJEBa/9Pad787E7QIIAMG+5SLP55Re0kd2pzs03tx7
+sPCvscdjRO+fNatq9O3PBsozYU8F+YYkoRFpoNnnyO8pcfdV4Hd+1+PGR3KJ0rpk
+TEDvGvkPy3NJkhWccGw//tBeDXb4QQJ4K1shQIuDdhE2tl87SBG+PH6lvGGdJUko
+hWJazB53AY2gEvv+X3axaQuS+fRNrs3HCbJrj2A17zyt6/LB8KPjRzmQdlVJf9/z
+BSvyZZgjs5HjyOSUnKWV6fZWsbvr4aZ1VMFxaPUTBZ84JzWhNKIOizwxfzkatIXy
+rOEnxUHbtMrMQp4LQPemGGQjUVUCtAScX5SVDOXeLR7N6lFfDlQDVTdb4jDg34Q=
+=1Xf2
 -----END PGP SIGNATURE-----
