@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999962';
+our $VERSION='0.9999999963';
 
 
 use 5.005;
